section one added to the website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ResumeBuilder</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="././assets/images/curriculum-vitae.png"
+    />
     <link rel="stylesheet" href="./assets/StyleSheet/main.css" />
   </head>
   <body>
@@ -17,7 +22,7 @@
                 alt="icon"
                 class="navbar-brand-icon"
               />
-              <p class="navbar-brand-text">Build <span>resume.</span></p>
+              <p class="navbar-brand-text">Build <span>Resume.</span></p>
             </a>
             <button type="button" class="navbar-toggler-btn">
               <ion-icon name="menu-outline" class="menu-btn"></ion-icon>
@@ -29,9 +34,9 @@
     <header class="header bg-bright" id="header">
       <div class="container">
         <div class="header-content text-center">
-          <h6 class="text-uppercase text-blue-dark fs-14 fw-6 ls-1">
+          <h5 class="text-uppercase text-blue-dark fs-14 fw-6 ls-1 sub-title">
             online resume builder
-          </h6>
+          </h5>
           <h1 class="lg-title">
             Only 2% of resumes make it pas the first round. Be in the top 2%
           </h1>
@@ -40,13 +45,42 @@
             exact 'resume rules' employers look for. Easy to use and done within
             minutes - try now for free!
           </p>
-          <a href="resume.html" class="btn btn-primary text-uppercase"
+          <a href="./resume.html" class="btn btn-primary text-uppercase"
             >create my resume</a
           >
           <img src="./assets/images/dublin-resume-templates.avif" />
         </div>
       </div>
     </header>
+    <div class="section-one">
+      <div class="container">
+        <div class="section-one-content">
+          <div class="section-one-l">
+            <img
+              src="./assets/images/visual-0c7080adf17f1f207276f613447c924f667dab34b7ac415cd7ef653172defd0b.svg"
+              alt=""
+            />
+          </div>
+          <div class="section-one-r text-center">
+            <h2 class="lg-title">Use the best resume maker as your guide!</h2>
+            <p class="text">
+              Getting that dream job can seem like an impossible task. We're
+              here to change that. Give yourself a real advantage with the best
+              online resume maker: created by experts, imporved by data, trusted
+              by millions of professionals
+            </p>
+            <div class="btn-group">
+              <a href="./resume.html" class="btn btn-primary text-uppercase"
+                >create my resume</a
+              >
+              <a href="#" class="btn btn-secondary text-uppercase"
+                >watch video</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       type="module"
