--- a/index.html
+++ b/index.html
@@ -92,6 +92,70 @@
         </div>
       </div>
     </div>
+    <div class="section-two bg-bright">
+      <div class="container">
+        <div class="section-two-content">
+          <div class="section-items">
+            <div class="section-item">
+              <div class="section-item-icon">
+                <img
+                  src="./assets/images/feature-1-edf4481d69166ac81917d1e40e6597c8d61aa970ad44367ce78049bf830fbda5.svg"
+                  alt=""
+                />
+              </div>
+              <h5 class="section-item-title">
+                Make a resume that wins interviews!
+              </h5>
+              <p class="text">
+                Use our resume maker with its advanced creation tools to tell
+                professional story that engages recruiters, hiring managers and
+                even CEOs.
+              </p>
+            </div>
+            <div class="section-item">
+              <div class="section-item-icon">
+                <img
+                  src="./assets/images/feature-2-a7a471bd973c02a55d1b3f8aff578cd3c9a4c5ac4fc74423d94ecc04aef3492b.svg"
+                  alt=""
+                />
+              </div>
+              <h5 class="section-item-title">Resume writing made easy!</h5>
+              <p class="text">
+                Resume writing has never been this effortless. Pre-generated
+                text, visual designs and more - all already integrated into the
+                resume maker. Just fill in your details.
+              </p>
+            </div>
+            <div class="section-item">
+              <div class="section-item-icon">
+                <img
+                  src="./assets/images/feature-3-4e87a82f83e260488c36f8105e26f439fdc3ee5009372bb5e12d9421f32eabdd.svg"
+                  alt=""
+                />
+              </div>
+              <h5 class="section-item-title">
+                A recruiter-tested CV maker tool
+              </h5>
+              <p class="text">
+                Our resume builder and its pre-generated content are tested by
+                recruiters and IT experts. We help your CV become truly
+                competitive in the hiring process.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer id="footer" class="footer bg-dark">
+      <div class="container">
+        <div class="footer-content text-center">
+          <p class="fs-15">
+            &copy;Copyright 2022. All Rights Reserved -
+            <span>build.resume</span>
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <script
       type="module"
@@ -101,6 +165,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+   
     <script src="./assets/JavaScript/app.js"></script>
   </body>
 </html>
