about and achievements section added to the cv-form

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ResumeBuilder</title>
+    <!-- favicon image -->
     <link
       rel="icon"
       type="image/x-icon"
-      href="././assets/images/curriculum-vitae.png"
+      href="./assets/images/curriculum-vitae.png"
     />
+    <!-- custom css file -->
     <link rel="stylesheet" href="./assets/StyleSheet/main.css" />
   </head>
   <body>
@@ -157,6 +159,7 @@
       </div>
     </footer>
 
+    <!-- ion-icons js cdn -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
@@ -165,7 +168,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-   
+    <!-- app js -->
     <script src="./assets/JavaScript/app.js"></script>
   </body>
 </html>
