cv-preview section ,jquery form-repeater cdn,repeater function added and generateCV function created

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <div class="container">
         <div class="footer-content text-center">
           <p class="fs-15">
-            &copy;Copyright 2022. All Rights Reserved -
+            &copy;Copyright 2023. All Rights Reserved -
             <span>build.resume</span>
           </p>
         </div>
@@ -168,7 +168,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <!-- app js -->
-    <script src="./assets/JavaScript/app.js"></script>
+    <!-- script js -->
+    <script src="./assets/JavaScript/script.js"></script>
   </body>
 </html>
