formValidation created for Cv form datas, created validation messages, and created fetchValues function for getting repeater form values

--- a/resume.html
+++ b/resume.html
@@ -175,7 +175,7 @@
                             type="text"
                             class="form-control achieve_title"
                             id=""
-                            onkeyup=""
+                            onkeyup="generateCV()"
                             placeholder="Title"
                           />
                           <span class="form-text"></span>
@@ -187,7 +187,7 @@
                             type="text"
                             class="form-control achieve_description"
                             id=""
-                            onkeyup=""
+                            onkeyup="generateCV()"
                             placeholder="Description"
                           />
                           <span class="form-text"></span>
